# homepage2vec

./: main.py  pyproject.toml  test.ipynb
src/homepage2vec/: model.py
