[project]
name = "homepage2vec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "lxml>=6.1.1",
    "numpy>=2.4.6",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]

[tool.hatch.build.target.wheel]
packages = ["src/homepage2vec"]
